@@ -1,6 +1,6 @@
-Description: Use build flags from environment for perl (dpkg-buildflags).
+Description: Use linker flags from environment for perl (dpkg-buildflags).
  Necessary for hardening flags.
-Author: Simon Ruderich <simon@ruderich.org>
+Author: Christos Trochalakis <yatiohi@ideopolis.gr>
 --- a/src/http/modules/perl/Makefile.PL
 +++ b/src/http/modules/perl/Makefile.PL
 @@ -3,6 +3,7 @@
@@ -11,15 +11,13 @@ Author: Simon Ruderich <simon@ruderich.org>
  use ExtUtils::MakeMaker;
  
  WriteMakefile(
-@@ -13,7 +14,10 @@ WriteMakefile(
-     ABSTRACT_FROM     => 'nginx.pm',     # retrieve abstract from module
+@@ -14,6 +15,9 @@ WriteMakefile(
      AUTHOR            => 'Igor Sysoev',
  
--    CCFLAGS           => "$ENV{NGX_PM_CFLAGS}",
-+    # $Config{ccflags}/$Config{lddlflags} doesn't contain hardening flags
-+    # (yet), add them manually.
-+    CCFLAGS           => "$Config{ccflags} $ENV{CFLAGS} $ENV{CPPFLAGS} $ENV{NGX_PM_CFLAGS}",
-+    LDDLFLAGS         => "$Config{lddlflags} $ENV{LDFLAGS}",
+     CCFLAGS           => "$ENV{NGX_PM_CFLAGS}",
++    # Pass link hardening flags
++    # $Config{lddlflags} is the default
++    LDDLFLAGS         => "$Config{lddlflags} $ENV{DEBIAN_NGINX_PERL_LDFLAGS}",
      OPTIMIZE          => '-O',
  
      INC               => join(" ", map {
